added some anottation so swager can handle token globally
